<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/arrow_back_ios_24"
            android:id="@+id/btnRegisterBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            tools:ignore="ContentDescription" />
        <TextView
            android:fontFamily="@font/museosans500"
            android:layout_margin="20dp"
            android:layout_weight="3"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greenflag_customers_can_create_an_account_to_access" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
    <LinearLayout
        android:padding="15dp"
        android:id="@+id/linearLayoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">
        <TextView
            android:fontFamily="@font/museosans500"
            android:textColor="@color/white"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
             />

        <EditText
            android:background="@color/white"
            android:id="@+id/et_emailAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:ignore="Autofill,LabelFor,TextFields" />


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llEmailAlertError"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="5dp"
                android:layout_margin="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/cross"
                tools:ignore="ContentDescription" />
            <TextView
                android:fontFamily="@font/museosans300"
                android:visibility="visible"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/tvAlertErrorEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </LinearLayout>


        <TextView
            android:fontFamily="@font/museosans500"
            android:textColor="@color/white"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/create_a_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <EditText
            android:background="@color/white"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/see_criteria_below"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="Autofill" />

        <TextView
            android:fontFamily="@font/museosans500"
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repeat_password"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <EditText
            android:background="@color/white"
            android:id="@+id/et_passwordRepeat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="Autofill" />


        <LinearLayout
            android:visibility="gone"
            android:id="@+id/llPasswordAlertError"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="5dp"
                android:layout_margin="10dp"
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/cross"
                tools:ignore="ContentDescription" />
            <TextView
                android:fontFamily="@font/museosans300"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/tvAlertErrorPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.045"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
        </LinearLayout>



    </LinearLayout>

    <TextView
        android:fontFamily="@font/museosans500"
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/your_password_should_have_a_minimum_of_8_characters_at_least_one_uppercase_letter_one_lowercase_letter_and_one_number_you_can_use_special_characters"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutForm" />

    <androidx.appcompat.widget.AppCompatButton
        android:alpha=".5"
        android:enabled="false"
        android:id="@+id/btnRegister"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:background="@drawable/gradient_button_background"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.457" />


</androidx.constraintlayout.widget.ConstraintLayout>